parser/bubbler_parser.go
// Code generated from D:/GoProject/bubbler/tools/../bubbler.g4 by ANTLR 4.13.1. DO NOT EDIT.

package parser // bubbler
import (
	"fmt"
	"strconv"
	"sync"

	"github.com/antlr4-go/antlr/v4"
)

// Suppress unused import errors
var _ = fmt.Printf
var _ = strconv.Itoa
var _ = sync.Once{}

type bubblerParser struct {
	*antlr.BaseParser
}

var BubblerParserStaticData struct {
	once                   sync.Once
	serializedATN          []int32
	LiteralNames           []string
	SymbolicNames          []string
	RuleNames              []string
	PredictionContextCache *antlr.PredictionContextCache
	atn                    *antlr.ATN
	decisionToDFA          []*antlr.DFA
}

func bubblerParserInit() {
	staticData := &BubblerParserStaticData
	staticData.LiteralNames = []string{
		"", "'import'", "'get'", "'set'", "'value'", "'void'", "'int8'", "'int16'",
		"'int32'", "'int64'", "'uint8'", "'uint16'", "'uint32'", "'uint64'",
		"'float32'", "'float64'", "'bool'", "'string'", "'bytes'", "'enum'",
		"'struct'", "'#'", "';'", "'='", "'?'", "'('", "')'", "'['", "']'",
		"'{'", "'}'", "'<'", "'<='", "'>'", "'>='", "'=='", "'!='", "'.'", "','",
		"':'", "'+'", "'-'", "'*'", "'/'", "'%'", "'**'", "'<<'", "'>>'", "'&'",
		"'|'", "'^'", "'~'", "'&&'", "'||'", "'!'",
	}
	staticData.SymbolicNames = []string{
		"", "IMPORT", "GET", "SET", "VALUE", "VOID", "INT8", "INT16", "INT32",
		"INT64", "UINT8", "UINT16", "UINT32", "UINT64", "FLOAT32", "FLOAT64",
		"BOOL", "STRING", "BYTES", "ENUM", "STRUCT", "HASH", "SEMI", "ASSIGN",
		"QUESTION", "LP", "RP", "LB", "RB", "LC", "RC", "LT", "LE", "GT", "GE",
		"EQ", "NE", "DOT", "COMMA", "COLON", "ADD", "SUB", "MUL", "DIV", "MOD",
		"POW", "SHL", "SHR", "BAND", "BOR", "BXOR", "BNOT", "AND", "OR", "NOT",
		"STR_LIT", "BOOL_LIT", "FLOAT_LIT", "INT_LIT", "IDENTIFIER", "WS", "LINE_COMMENT",
		"COMMENT", "KEYWORDS",
	}
	staticData.RuleNames = []string{
		"proto", "importStatement", "topLevelDef", "size_", "byteSize", "bitSize",
		"optionName", "field", "fieldVoid", "fieldConstant", "fieldEmbedded",
		"fieldNormal", "fieldOptions", "fieldOption", "fieldMethods", "fieldMethod",
		"type_", "basicType", "enumDef", "enumBody", "enumElement", "enumField",
		"enumValueOptions", "enumValueOption", "structDef", "structBody", "structElement",
		"expr", "value", "constant", "emptyStatement_", "ident", "structName",
		"enumName", "fieldName", "methodName", "structType", "enumType", "arrayType",
		"intLit", "strLit", "boolLit", "floatLit",
	}
	staticData.PredictionContextCache = antlr.NewPredictionContextCache()
	deserializer := antlr.NewATNDeserializer(nil)
	staticData.atn = deserializer.Deserialize(staticData.serializedATN)
	atn := staticData.atn
	staticData.decisionToDFA = make([]*antlr.DFA, len(atn.DecisionToState))
	decisionToDFA := staticData.decisionToDFA
	for index, state := range atn.DecisionToState {
		decisionToDFA[index] = antlr.NewDFA(state, index)
	}
}

// bubblerParserInit initializes any static state used to implement bubblerParser. By default the
// static state used to implement the parser is lazily initialized during the first call to
// NewbubblerParser(). You can call this function if you wish to initialize the static state ahead
// of time.
func BubblerParserInit() {
	staticData := &BubblerParserStaticData
	staticData.once.Do(bubblerParserInit)
}

// NewbubblerParser produces a new parser instance for the optional input antlr.TokenStream.
func NewbubblerParser(input antlr.TokenStream) *bubblerParser {
	BubblerParserInit()
	this := new(bubblerParser)
	this.BaseParser = antlr.NewBaseParser(input)
	staticData := &BubblerParserStaticData
	this.Interpreter = antlr.NewParserATNSimulator(this, staticData.atn, staticData.decisionToDFA, staticData.PredictionContextCache)
	this.RuleNames = staticData.RuleNames
	this.LiteralNames = staticData.LiteralNames
	this.SymbolicNames = staticData.SymbolicNames
	this.GrammarFileName = "bubbler.g4"

	return this
}

// bubblerParser tokens.
const (
	bubblerParserEOF          = antlr.TokenEOF
	bubblerParserIMPORT       = 1
	bubblerParserGET          = 2
	bubblerParserSET          = 3
	bubblerParserVALUE        = 4
	bubblerParserVOID         = 5
	bubblerParserINT8         = 6
	bubblerParserINT16        = 7
	bubblerParserINT32        = 8
	bubblerParserINT64        = 9
	bubblerParserUINT8        = 10
	bubblerParserUINT16       = 11
	bubblerParserUINT32       = 12
	bubblerParserUINT64       = 13
	bubblerParserFLOAT32      = 14
	bubblerParserFLOAT64      = 15
	bubblerParserBOOL         = 16
	bubblerParserSTRING       = 17
	bubblerParserBYTES        = 18
	bubblerParserENUM         = 19
	bubblerParserSTRUCT       = 20
	bubblerParserHASH         = 21
	bubblerParserSEMI         = 22
	bubblerParserASSIGN       = 23
	bubblerParserQUESTION     = 24
	bubblerParserLP           = 25
	bubblerParserRP           = 26
	bubblerParserLB           = 27
	bubblerParserRB           = 28
	bubblerParserLC           = 29
	bubblerParserRC           = 30
	bubblerParserLT           = 31
	bubblerParserLE           = 32
	bubblerParserGT           = 33
	bubblerParserGE           = 34
	bubblerParserEQ           = 35
	bubblerParserNE           = 36
	bubblerParserDOT          = 37
	bubblerParserCOMMA        = 38
	bubblerParserCOLON        = 39
	bubblerParserADD          = 40
	bubblerParserSUB          = 41
	bubblerParserMUL          = 42
	bubblerParserDIV          = 43
	bubblerParserMOD          = 44
	bubblerParserPOW          = 45
	bubblerParserSHL          = 46
	bubblerParserSHR          = 47
	bubblerParserBAND         = 48
	bubblerParserBOR          = 49
	bubblerParserBXOR         = 50
	bubblerParserBNOT         = 51
	bubblerParserAND          = 52
	bubblerParserOR           = 53
	bubblerParserNOT          = 54
	bubblerParserSTR_LIT      = 55
	bubblerParserBOOL_LIT     = 56
	bubblerParserFLOAT_LIT    = 57
	bubblerParserINT_LIT      = 58
	bubblerParserIDENTIFIER   = 59
	bubblerParserWS           = 60
	bubblerParserLINE_COMMENT = 61
	bubblerParserCOMMENT      = 62
	bubblerParserKEYWORDS     = 63
)

// bubblerParser rules.
const (
	bubblerParserRULE_proto            = 0
	bubblerParserRULE_importStatement  = 1
	bubblerParserRULE_topLevelDef      = 2
	bubblerParserRULE_size_            = 3
	bubblerParserRULE_byteSize         = 4
	bubblerParserRULE_bitSize          = 5
	bubblerParserRULE_optionName       = 6
	bubblerParserRULE_field            = 7
	bubblerParserRULE_fieldVoid        = 8
	bubblerParserRULE_fieldConstant    = 9
	bubblerParserRULE_fieldEmbedded    = 10
	bubblerParserRULE_fieldNormal      = 11
	bubblerParserRULE_fieldOptions     = 12
	bubblerParserRULE_fieldOption      = 13
	bubblerParserRULE_fieldMethods     = 14
	bubblerParserRULE_fieldMethod      = 15
	bubblerParserRULE_type_            = 16
	bubblerParserRULE_basicType        = 17
	bubblerParserRULE_enumDef          = 18
	bubblerParserRULE_enumBody         = 19
	bubblerParserRULE_enumElement      = 20
	bubblerParserRULE_enumField        = 21
	bubblerParserRULE_enumValueOptions = 22
	bubblerParserRULE_enumValueOption  = 23
	bubblerParserRULE_structDef        = 24
	bubblerParserRULE_structBody       = 25
	bubblerParserRULE_structElement    = 26
	bubblerParserRULE_expr             = 27
	bubblerParserRULE_value            = 28
	bubblerParserRULE_constant         = 29
	bubblerParserRULE_emptyStatement_  = 30
	bubblerParserRULE_ident            = 31
	bubblerParserRULE_structName       = 32
	bubblerParserRULE_enumName         = 33
	bubblerParserRULE_fieldName        = 34
	bubblerParserRULE_methodName       = 35
	bubblerParserRULE_structType       = 36
	bubblerParserRULE_enumType         = 37
	bubblerParserRULE_arrayType        = 38
	bubblerParserRULE_intLit           = 39
	bubblerParserRULE_strLit           = 40
	bubblerParserRULE_boolLit          = 41
	bubblerParserRULE_floatLit         = 42
)

// IProtoContext is an interface to support dynamic dispatch.
type IProtoContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// Getter signatures
	EOF() antlr.TerminalNode
	AllImportStatement() []IImportStatementContext
	ImportStatement(i int) IImportStatementContext
	AllTopLevelDef() []ITopLevelDefContext
	TopLevelDef(i int) ITopLevelDefContext
	AllEmptyStatement_() []IEmptyStatement_Context
	EmptyStatement_(i int) IEmptyStatement_Context

	// IsProtoContext differentiates from other interfaces.
	IsProtoContext()
}

type ProtoContext struct {
	antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyProtoContext() *ProtoContext {
	var p = new(ProtoContext)
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = bubblerParserRULE_proto
	return p
}

func InitEmptyProtoContext(p *ProtoContext) {
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = bubblerParserRULE_proto
}

func (*ProtoContext) IsProtoContext() {}

func NewProtoContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *ProtoContext {
	var p = new(ProtoContext)

	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, parent, invokingState)

	p.parser = parser
	p.RuleIndex = bubblerParserRULE_proto

	return p
}

func (s *ProtoContext) GetParser() antlr.Parser { return s.parser }

func (s *ProtoContext) EOF() antlr.TerminalNode {
	return s.GetToken(bubblerParserEOF, 0)
}

func (s *ProtoContext) AllImportStatement() []IImportStatementContext {
	children := s.GetChildren()
	len := 0
	for _, ctx := range children {
		if _, ok := ctx.(IImportStatementContext); ok {
			len++
		}
	}

	tst := make([]IImportStatementContext, len)
	i := 0
	for _, ctx := range children {
		if t, ok := ctx.(IImportStatementContext); ok {
			tst[i] = t.(IImportStatementContext)
			i++
		}
	}

	return tst
}

func (s *ProtoContext) ImportStatement(i int) IImportStatementContext {
	var t antlr.RuleContext
	j := 0
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IImportStatementContext); ok {
			if j == i {
				t = ctx.(antlr.RuleContext)
				break
			}
			j++
		}
	}

	if t == nil {
		return nil
	}

	return t.(IImportStatementContext)
}

func (s *ProtoContext) AllTopLevelDef() []ITopLevelDefContext {
	children := s.GetChildren()
	len := 0
	for _, ctx := range children {
		if _, ok := ctx.(ITopLevelDefContext); ok {
			len++
		}
	}

	tst := make([]ITopLevelDefContext, len)
	i := 0
	for _, ctx := range children {
		if t, ok := ctx.(ITopLevelDefContext); ok {
			tst[i] = t.(ITopLevelDefContext)
			i++
		}
	}

	return tst
}

func (s *ProtoContext) TopLevelDef(i int) ITopLevelDefContext {
	var t antlr.RuleContext
	j := 0
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(ITopLevelDefContext); ok {
			if j == i {
				t = ctx.(antlr.RuleContext)
				break
			}
			j++
		}
	}

	if t == nil {
		return nil
	}

	return t.(ITopLevelDefContext)
}

func (s *ProtoContext) AllEmptyStatement_() []IEmptyStatement_Context {
	children := s.GetChildren()
	len := 0
	for _, ctx := range children {
		if _, ok := ctx.(IEmptyStatement_Context); ok {
			len++
		}
	}

	tst := make([]IEmptyStatement_Context, len)
	i := 0
	for _, ctx := range children {
		if t, ok := ctx.(IEmptyStatement_Context); ok {
			tst[i] = t.(IEmptyStatement_Context)
			i++
		}
	}

	return tst
}

func (s *ProtoContext) EmptyStatement_(i int) IEmptyStatement_Context {
	var t antlr.RuleContext
	j := 0
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IEmptyStatement_Context); ok {
			if j == i {
				t = ctx.(antlr.RuleContext)
				break
			}
			j++
		}
	}

	if t == nil {
		return nil
	}

	return t.(IEmptyStatement_Context)
}

func (s *ProtoContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *ProtoContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *ProtoContext) Accept(visitor antlr.ParseTreeVisitor) interface{} {
	switch t := visitor.(type) {
	case bubblerVisitor:
		return t.VisitProto(s)

	default:
		return t.VisitChildren(s)
	}
}

func (p *bubblerParser) Proto() (localctx IProtoContext) {
	localctx = NewProtoContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 0, bubblerParserRULE_proto)
	var _la int

	p.EnterOuterAlt(localctx, 1)
	p.SetState(91)
	p.GetErrorHandler().Sync(p)
	if p.HasError() {
		goto errorExit
	}
	_la = p.GetTokenStream().LA(1)

	for (int64(_la) & ^0x3f) == 0 && ((int64(1)<<_la)&5767170) != 0 {
		p.SetState(89)
		p.GetErrorHandler().Sync(p)
		if p.HasError() {
			goto errorExit
		}

		switch p.GetTokenStream().LA(1) {
		case bubblerParserIMPORT:
			{
				p.SetState(86)
				p.ImportStatement()
			}

		case bubblerParserENUM, bubblerParserSTRUCT:
			{
				p.SetState(87)
				p.TopLevelDef()
			}

		case bubblerParserSEMI:
			{
				p.SetState(88)
				p.EmptyStatement_()
			}

		default:
			p.SetError(antlr.NewNoViableAltException(p, nil, nil, nil, nil, nil))
			goto errorExit
		}

		p.SetState(93)
		p.GetErrorHandler().Sync(p)
		if p.HasError() {
			goto errorExit
		}
		_la = p.GetTokenStream().LA(1)
	}
	{
		p.SetState(94)
		p.Match(bubblerParserEOF)
		if p.HasError() {
			// Recognition error - abort rule
			goto errorExit
		}
	}

errorExit:
	if p.HasError() {
		v := p.GetError()
		localctx.SetException(v)
		p.GetErrorHandler().ReportError(p, v)
		p.GetErrorHandler().Recover(p, v)
		p.SetError(nil)
	}
	p.ExitRule()
	return localctx
	goto errorExit // Trick to prevent compiler error if the label is not used
}

// IImportStatementContext is an interface to support dynamic dispatch.
type IImportStatementContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// Getter signatures
	IMPORT() antlr.TerminalNode
	StrLit() IStrLitContext
	SEMI() antlr.TerminalNode

	// IsImportStatementContext differentiates from other interfaces.
	IsImportStatementContext()
}

type ImportStatementContext struct {
	antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyImportStatementContext() *ImportStatementContext {
	var p = new(ImportStatementContext)
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = bubblerParserRULE_importStatement
	return p
}

func InitEmptyImportStatementContext(p *ImportStatementContext) {
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = bubblerParserRULE_importStatement
}

func (*ImportStatementContext) IsImportStatementContext() {}

func NewImportStatementContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *ImportStatementContext {
	var p = new(ImportStatementContext)

	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, parent, invokingState)

	p.parser = parser
	p.RuleIndex = bubblerParserRULE_importStatement

	return p
}

func (s *ImportStatementContext) GetParser() antlr.Parser { return s.parser }

func (s *ImportStatementContext) IMPORT() antlr.TerminalNode {
	return s.GetToken(bubblerParserIMPORT, 0)
}

func (s *ImportStatementContext) StrLit() IStrLitContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IStrLitContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IStrLitContext)
}

func (s *ImportStatementContext) SEMI() antlr.TerminalNode {
	return s.GetToken(bubblerParserSEMI, 0)
}

func (s *ImportStatementContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *ImportStatementContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *ImportStatementContext) Accept(visitor antlr.ParseTreeVisitor) interface{} {
	switch t := visitor.(type) {
	case bubblerVisitor:
		return t.VisitImportStatement(s)

	default:
		return t.VisitChildren(s)
	}
}

func (p *bubblerParser) ImportStatement() (localctx IImportStatementContext) {
	localctx = NewImportStatementContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 2, bubblerParserRULE_importStatement)
	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(96)
		p.Match(bubblerParserIMPORT)
		if p.HasError() {
			// Recognition error - abort rule
			goto errorExit
		}
	}
	{
		p.SetState(97)
		p.StrLit()
	}
	{
		p.SetState(98)
		p.Match(bubblerParserSEMI)
		if p.HasError() {
			// Recognition error - abort rule
			goto errorExit
		}
	}

errorExit:
	if p.HasError() {
		v := p.GetError()
		localctx.SetException(v)
		p.GetErrorHandler().ReportError(p, v)
		p.GetErrorHandler().Recover(p, v)
		p.SetError(nil)
	}
	p.ExitRule()
	return localctx
	goto errorExit // Trick to prevent compiler error if the label is not used
}

// ITopLevelDefContext is an interface to support dynamic dispatch.
type ITopLevelDefContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// Getter signatures
	EnumDef() IEnumDefContext
	StructDef() IStructDefContext

	// IsTopLevelDefContext differentiates from other interfaces.
	IsTopLevelDefContext()
}

type TopLevelDefContext struct {
	antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyTopLevelDefContext() *TopLevelDefContext {
	var p = new(TopLevelDefContext)
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = bubblerParserRULE_topLevelDef
	return p
}

func InitEmptyTopLevelDefContext(p *TopLevelDefContext) {
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = bubblerParserRULE_topLevelDef
}

func (*TopLevelDefContext) IsTopLevelDefContext() {}

func NewTopLevelDefContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *TopLevelDefContext {
	var p = new(TopLevelDefContext)

	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, parent, invokingState)

	p.parser = parser
	p.RuleIndex = bubblerParserRULE_topLevelDef

	return p
}

func (s *TopLevelDefContext) GetParser() antlr.Parser { return s.parser }

func (s *TopLevelDefContext) EnumDef() IEnumDefContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IEnumDefContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IEnumDefContext)
}

func (s *TopLevelDefContext) StructDef() IStructDefContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IStructDefContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IStructDefContext)
}

func (s *TopLevelDefContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *TopLevelDefContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *TopLevelDefContext) Accept(visitor antlr.ParseTreeVisitor) interface{} {
	switch t := visitor.(type) {
	case bubblerVisitor:
		return t.VisitTopLevelDef(s)

	default:
		return t.VisitChildren(s)
	}
}

func (p *bubblerParser) TopLevelDef() (localctx ITopLevelDefContext) {
	localctx = NewTopLevelDefContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 4, bubblerParserRULE_topLevelDef)
	p.SetState(102)
	p.GetErrorHandler().Sync(p)
	if p.HasError() {
		goto errorExit
	}

	switch p.GetTokenStream().LA(1) {
	case bubblerParserENUM:
		p.EnterOuterAlt(localctx, 1)
		{
			p.SetState(100)
			p.EnumDef()
		}

	case bubblerParserSTRUCT:
		p.EnterOuterAlt(localctx, 2)
		{
			p.SetState(101)
			p.StructDef()
		}

	default:
		p.SetError(antlr.NewNoViableAltException(p, nil, nil, nil, nil, nil))
		goto errorExit
	}

errorExit:
	if p.HasError() {
		v := p.GetError()
		localctx.SetException(v)
		p.GetErrorHandler().ReportError(p, v)
		p.GetErrorHandler().Recover(p, v)
		p.SetError(nil)
	}
	p.ExitRule()
	return localctx
	goto errorExit // Trick to prevent compiler error if the label is not used
}

// ISize_Context is an interface to support dynamic dispatch.
type ISize_Context interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// Getter signatures
	LB() antlr.TerminalNode
	RB() antlr.TerminalNode
	ByteSize() IByteSizeContext
	HASH() antlr.TerminalNode
	BitSize() IBitSizeContext

	// IsSize_Context differentiates from other interfaces.
	IsSize_Context()
}

type Size_Context struct {
	antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptySize_Context() *Size_Context {
	var p = new(Size_Context)
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = bubblerParserRULE_size_
	return p
}

func InitEmptySize_Context(p *Size_Context) {
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = bubblerParserRULE_size_
}

func (*Size_Context) IsSize_Context() {}

func NewSize_Context(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *Size_Context {
	var p = new(Size_Context)

	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, parent, invokingState)

	p.parser = parser
	p.RuleIndex = bubblerParserRULE_size_

	return p
}

func (s *Size_Context) GetParser() antlr.Parser { return s.parser }

func (s *Size_Context) LB() antlr.TerminalNode {
	return s.GetToken(bubblerParserLB, 0)
}

func (s *Size_Context) RB() antlr.TerminalNode {
	return s.GetToken(bubblerParserRB, 0)
}

func (s *Size_Context) ByteSize() IByteSizeContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IByteSizeContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IByteSizeContext)
}

func (s *Size_Context) HASH() antlr.TerminalNode {
	return s.GetToken(bubblerParserHASH, 0)
}

func (s *Size_Context) BitSize() IBitSizeContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IBitSizeContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IBitSizeContext)
}

func (s *Size_Context) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *Size_Context) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *Size_Context) Accept(visitor antlr.ParseTreeVisitor) interface{} {
	switch t := visitor.(type) {
	case bubblerVisitor:
		return t.VisitSize_(s)

	default:
		return t.VisitChildren(s)
	}
}

func (p *bubblerParser) Size_() (localctx ISize_Context) {
	localctx = NewSize_Context(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 6, bubblerParserRULE_size_)
	var _la int
